# mintct

./: CMakeLists.txt  README.md  mindtct.c  mindtct.h  mindtct.i  mindtct.spec
